# text-to-sql-poc

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  start.sh
.claude/: settings.local.json
database/: ecommerce.duckdb
docs/: architecture.md  database_schema.md  examples.md  query_routing.md
scripts/: demo.py  init_data.py  init_db.py  init_duckdb.py  init_local_data.py
src/text_to_sql/: config.py  pipeline.py
src/text_to_sql/database/: duckdb_schema_registry.py  schema.py  schema_metadata.yaml  schema_registry.py  seed.py
src/text_to_sql/executor/: mcp_executor.py
src/text_to_sql/generator/: prompts.py  sql_generator.py
src/text_to_sql/models/: request.py  response.py
src/text_to_sql/router/: prompts.py  table_router.py
src/text_to_sql/routing/: __init__.py  duckdb_executor.py  duckdb_file_executor.py  local_executor.py  query_classifier.py  query_router.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_demo.py  test_duckdb_executor.py  test_duckdb_file_executor.py  test_duckdb_schema_registry.py  test_local_executor.py  test_mcp_executor.py  test_models.py  test_pipeline.py  test_query_classifier.py  test_query_router.py  test_schema_registry.py  test_seed.py  test_sql_generator.py  test_table_router.py
